Fix overflow and scrolling

--- a/src/plugins/showHiddenChannels/style.css
+++ b/src/plugins/showHiddenChannels/style.css
@@ -1,17 +1,10 @@
-.vc-shc-outer-container {
-    overflow: hidden scroll;
-    flex: 1 1 auto;
-    height: 100%;
-    width: 100%;
-}
-
 .vc-shc-container {
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
     text-align: center;
-    gap: 0.5em;
+    gap: 0.65em;
     margin: 0.5em 0;
     min-height: 100%;
 }
